我们创建了一个模板页面

--- a/template/views/index/index/index.html
+++ b/template/views/index/index/index.html
@@ -6,11 +6,14 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>第一天，我们创建了一个模板页面</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content<a href="{:url('index/hello', 'name=5')}">sssss</a></div>
+        <h3>第一天，我们创建了一个模板页面</h3>
+        <div>并且输出了我们想要到的东西。
+            
+            <a href="{:url('index/hello', 'name=5')}"></a></div>
     </body>
 </html>
