第二天  动态切换皮肤

--- a/template/views/index/index/index.html
+++ b/template/views/index/index/index.html
@@ -13,7 +13,7 @@ and open the template in the editor.
     <body>
         <h3>第一天，我们创建了一个模板页面</h3>
         <div>并且输出了我们想要到的东西。
-            
             <a href="{:url('index/hello', 'name=5')}"></a></div>
+        <h3>虽然还是同样的位置，但实现方法可以有点不一样呢！</h3>
     </body>
 </html>
