第四天 简单写入数据及皮肤目录结构的组织

--- a/public/pc/theme1/static/css/style.css
+++ b/public/pc/theme1/static/css/style.css
@@ -14,5 +14,19 @@
 
 body{
     font: 16px;
-    color: red;
+    color: #333;
+}
+
+.formpanel{
+    width: 400px;
+    padding: 20px;
+    border: solid 1px #666;
+}
+
+.formpanel div{    
+    display: block;
+    height: 30px;
+    line-height: 30px;
+    border-bottom: solid 1px #666;
+    padding: 10px;
 }
